--- a/views/documents/metadata.pug
+++ b/views/documents/metadata.pug
@@ -8,10 +8,7 @@ block content
         div(class='row row-margin')
           div(class='col-12')
             div(class='key d-inline font-weight-bold') Manuscript #: 
-              if document.metadata.manuscriptId !== ""
-                div(class='value d-inline') #{document.metadata.manuscriptId}
-              else
-                  div(class='value d-inline') Not Found
+            div(class='value d-inline') #{document.metadata.manuscriptId}
           div(class='col-12')
             div(class='key d-inline font-weight-bold') Article Title : 
             div(class='value d-inline') #{document.metadata.articleTitle}
@@ -22,38 +19,26 @@ block content
         div(class='row row-margin')
           div(class='col-12')
             div(class='key d-inline font-weight-bold') Authors : 
-            div(class='value d-inline') #{authors}
+            div(class='value d-inline') #{document.metadata.authors}
 
         div(class='row row-margin')
           div(class='col-12')
             div(class='key d-inline font-weight-bold') Submitting Author : 
-            if document.metadata.author_persons !== ""
-              div(class='value d-inline') #{document.metadata.author_persons}
-            else
-                div(class='value d-inline') Not Found
+            div(class='value d-inline') #{document.metadata.submittingAuthor}
           div(class='col-12')
-            div(class='key d-inline font-weight-bold') Submitting Author Institutions : 
-            if author_organizations !== ""
-              div(class='value d-inline') #{author_organizations}
-            else
-                div(class='value d-inline') Not Found
+            div(class='key d-inline font-weight-bold') Submitting Author email : 
+            div(class='value d-inline') #{document.metadata.submittingAuthoremail}
 
         div(class='row row-margin')
           div(class='col-12')
             div(class='key d-inline font-weight-bold') Institutions : 
-            if document.metadata.institutions.length > 0
-              each val, index in document.metadata.institutions
-                div(class='value d-block') #{(index + 1)} #{val}
-            else
-                div(class='value d-inline') Not Found
+            each val, index in document.metadata.institutions
+              div(class='value d-block') #{(index + 1)} #{val}
 
         div(class='row row-margin')
           div(class='col-12')
             div(class='key d-inline font-weight-bold') Funders : 
-            if document.metadata.funders.length > 0
-              div(class='value d-inline') #{document.metadata.funders}
-            else
-              div(class='value d-inline') Not found
+            div(class='value d-inline') #{document.metadata.funders}
 
         div(class='row crud-button-action')
           div(class='col-6 text-center')
