--- a/views/signup.pug
+++ b/views/signup.pug
@@ -11,6 +11,7 @@ block content
         div(class='row')
           div(class='col-12')
             form(role='form', action=root + route, method='post', style='max-width: 300px; margin: auto; text-align: center; margin-top:20px;')
+              input(type="hidden" id="g-recaptcha-response" name="g-recaptcha-response")
               if error
                 div(class='alert alert-warning' role='alert') #{error}
               if success
@@ -25,3 +26,5 @@ block content
         div(class='row')
           div(class='col-12 my-5' style='margin-top:20px;margin: auto; text-align: center; ') Already have an account?  
             a(href=root + 'signup') Sign in here
+
+  include ./captcha.pug
