--- a/views/signup.pug
+++ b/views/signup.pug
@@ -19,6 +19,8 @@ block content
                 input.form-control(type='email', name='username', placeholder='mail address')
               .form-group
                 input.form-control(type='password', name='password', placeholder='password')
+              .form-group
+                input.form-control(type='password', name='confirm_password', placeholder='confirm password')
               .btn-group
                 button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') Sign up to Dataseer
 
