--- a/views/signin.pug
+++ b/views/signin.pug
@@ -19,6 +19,8 @@ block content
                 input.form-control(type='email', name='username', placeholder='mail address' value=username)
               .form-group
                 input.form-control(type='password', name='password', placeholder='password')
+              .form-group
+                input.form-control(type='hidden', name='redirect' value=redirect)
               .btn-group
                 button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') Sign in to Dataseer
 
