--- a/views/backoffice/accounts.pug
+++ b/views/backoffice/accounts.pug
@@ -14,42 +14,57 @@ block content
         div(class='list')
           div(class='row')
             div(class='col-12 text-center' style='margin-top:10px;')
-              div(class='header') List of all accounts
+              div(class='header') Custom search :
           div(class='row')
-            div(class='col-10 offset-1')
-              input#search(type='text' name='username' placeholder='Search for email adress (or role)')
-          div(class='row head-list')
-              div(class='col-2 offset-1') Email
-              div(class='col-2') Current role
-              div(class='col-6') Update role
+            div(class='col-12 text-center')
+              form#custom-search(role='form', action=root + route,method='get')
+                div limit : 
+                  input(type='text' name='limit' placeholder='Maximum number of results')
+                div
+                  button.btn.btn-default.waves-effect.waves-light(type='submit') Search for accounts
+          div(class='row')
+            div(class='col-12 text-center')
+              div(class='header count-list') #{accounts.length} Result(s)
           if  accounts.length === 0
             div(class='row')
               div(class='col-12 text-center')
                 div(class='header') No data
-          each account, index in accounts
-            div(class='row' data=true)
-              div(class='col-2 offset-1') #{account.username}
-              div(class='col-2') #{account.role.label}
-              div(class='col-6')
-                form.accounts(role='form', action=root + route, method='post')
-                  input.form-control(type='text' name='username' class='hidden' value=account.username)
-                  .form-group
-                    if account.role.label !== 'standard_user'
-                      input.form-control(type='radio' name='role' value='standard_user')
-                    else
-                      input.form-control(type='radio' name='role' value='standard_user' checked)
-                    div standard_user
-                    if account.role.label !== 'annotator'
-                      input.form-control(type='radio' name='role' value='annotator')
-                    else
-                      input.form-control(type='radio' name='role' value='annotator' checked)
-                    div annotator
-                    if account.role.label !== 'curator'
-                      input.form-control(type='radio' name='role' value='curator')
-                    else
-                      input.form-control(type='radio' name='role' value='curator' checked)
-                    div curator
-                    button.btn.btn-default.waves-effect.waves-light(type='submit') update role
+          else
+            div(class='row')
+              div(class='col-10 offset-1')
+                input#search(type='text' name='username' placeholder='Search for email adress (or role)')
+            div(class='row head-list')
+                div(class='col-2 offset-1') Email
+                div(class='col-2') Current role
+                div(class='col-6') Update role
+            if  accounts.length === 0
+              div(class='row')
+                div(class='col-12 text-center')
+                  div(class='header') No data
+            each account, index in accounts
+              div(class='row row-list' data=true)
+                div(class='col-2 offset-1') #{account.username}
+                div(class='col-2') #{account.role.label}
+                div(class='col-6')
+                  form.accounts(role='form', action=root + route, method='post')
+                    input.form-control(type='text' name='username' class='hidden' value=account.username)
+                    .form-group
+                      if account.role.label !== 'standard_user'
+                        input.form-control(type='radio' name='role' value='standard_user')
+                      else
+                        input.form-control(type='radio' name='role' value='standard_user' checked)
+                      div standard_user
+                      if account.role.label !== 'annotator'
+                        input.form-control(type='radio' name='role' value='annotator')
+                      else
+                        input.form-control(type='radio' name='role' value='annotator' checked)
+                      div annotator
+                      if account.role.label !== 'curator'
+                        input.form-control(type='radio' name='role' value='curator')
+                      else
+                        input.form-control(type='radio' name='role' value='curator' checked)
+                      div curator
+                      button.btn.btn-default.waves-effect.waves-light(type='submit') update role
 
           div(class='row')
             div(class='col-12' style='margin-top:20px;')
