--- a/views/backoffice/accounts.pug
+++ b/views/backoffice/accounts.pug
@@ -18,21 +18,30 @@ block content
           div(class='row')
             div(class='col-12 text-center')
               form#custom-search(role='form', action=root + route,method='get')
+                div role : 
+                  select(name='role')
+                    option(value='all') All
+                    option(value='standard_user') Standard User
+                    option(value='annotator') Annotator
+                    option(value='curator') Curator
                 div limit : 
                   input(type='text' name='limit' placeholder='Maximum number of results')
                 div
                   button.btn.btn-default.waves-effect.waves-light(type='submit') Search for accounts
           div(class='row')
             div(class='col-12 text-center')
-              div(class='header count-list') #{accounts.length} Result(s)
+              div(class='header') Accounts
           if  accounts.length === 0
             div(class='row')
               div(class='col-12 text-center')
                 div(class='header') No data
           else
             div(class='row')
+              div(class='col-12 text-center')
+                div(class='count-list') #{accounts.length} result(s)
+            div(class='row')
               div(class='col-10 offset-1')
-                input#search(type='text' name='username' placeholder='Search for email adress (or role)')
+                input#search(type='text' name='username' placeholder='Search for email adress')
             div(class='row head-list')
                 div(class='col-2 offset-1') Email
                 div(class='col-2') Current role
