--- a/views/myDocuments.pug
+++ b/views/myDocuments.pug
@@ -8,7 +8,11 @@ block content
         div(class='list')
           div(class='row')
             div(class='col-12 text-center' style='margin-top:10px;')
-              div(class='header') My documents
+              div(class='header') My documents 
+          if documents.length !== 0
+            div(class='row')
+              div(class='col-12 text-center')
+                div(class='count-list') #{documents.length} Result(s)
           div(class='row')
             div(class='col-12')
               input#search(type='text' name='username' placeholder='Search for document (doi, pmid, title, email, etc)')
@@ -18,13 +22,13 @@ block content
             div(class='col-2') Modified by
             div(class='col-2') Journal
             div(class='col-4') Title
-          if  documents.length === 0
+          if documents.length === 0
             div(class='row')
               div(class='col-12 text-center')
                 div(class='header') No data
           else
             each document, index in documents
-              div(class='row' style='margin-right:10px; margin-left:10px;' data='true')
+              div(class='row row-list' style='margin-right:10px; margin-left:10px;' data='true')
                 div(class='col-2')
                     a(href=root + 'documents/' + document._id) #{document._id}
                 if document.status === 'metadata'
