--- a/views/functions/format.pug
+++ b/views/functions/format.pug
@@ -4,6 +4,8 @@
         month = '' + (d.getMonth() + 1),
         day = '' + d.getDate(),
         year = d.getFullYear();
+    if (Number.isNaN(month) || Number.isNaN(day) || Number.isNaN(year))
+      return '';
 
     if (month.length < 2) 
         month = '0' + month;
