--- a/views/myDocuments.pug
+++ b/views/myDocuments.pug
@@ -23,9 +23,9 @@ block content
             div(class='col-1') Uploaded at
             div(class='col-2') Status
             div(class='col-2') Modified by
-            div(class='col-2') 
+            div(class='col-2') Journal
             div(class='col-4') Title
-          if  documents.length === 0
+          if documents.length === 0
             div(class='row')
               div(class='col-12 text-center')
                 div(class='header') No data
