--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,12 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,300');
+
 body {
   margin-left: 50px;
   margin-right: 50px;
   margin-top: 20px;
   margin-bottom: 20px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-  color: #063046;
+  font: 14px "Open Sans", "Lucida Grande", Helvetica, sans-serif;
+  color: #3a3a3a;
   background-color: lightgray;
 }
 
@@ -219,4 +221,8 @@ a.nav {
 a.nav.active {
   color: #184D7E;
   font-weight: bold;
+}
+
+a {
+  color: #184D7E;
 }
