minor color update

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -190,6 +190,13 @@ body {
   background-color: white;
 }
 
+/*
+Color variants 
+0274BE
+184D7E
+1E3945
+*/
+
 .btn-primary {
   background-color: #184D7E;
   border-color: #184D7E;
