--- a/views/documents/metadata.pug
+++ b/views/documents/metadata.pug
@@ -44,7 +44,7 @@ block content
           div(class='col-6 text-center')
             button(id='metadata_validation' class='btn btn-primary') This info is correct : Continue
           div(class='col-6 text-center')
-            a(href="mailto:tim@dataseer.io")
+            a(href="mailto:tim@dataseer.ai")
               button(id='metadata_contest' class='btn btn-primary') Something is wrong : Contact the DataSeer curator
 
   if demo
