--- a/views/layout.pug
+++ b/views/layout.pug
@@ -69,9 +69,9 @@ html
     block content
 
     div(style='text-align:center;margin-top: 20px;')  
-      a(href='https://www.dataseer.io' style='color:#ffffff;' target='_blank') dataseer.io
+      a(href='https://www.dataseer.io' style='color:#ffffff;' target='_blank') dataseer.ai
       a(href='https://github.com/kermitt2/dataseer-web' target='_blank')
-        i(class='fab fa-github' style='color:#8DCB55;margin-left:5px;')
+        i(class='fab fa-github' style='color:#1E3945;margin-left:5px;')
 
   script(src=root + 'javascripts/lib/jquery.js')
   if document
