--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,7 +106,7 @@ body {
 }
 
 #user-navbar > #logo {
-  background-image: url(../img/DataSeer-logo-75.png);
+  background-image: url(../img/DataSeer-logo-beta-75.png);
   background-repeat: no-repeat;
   background-position: left center;
   min-height: 195px;
