--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -14,7 +14,10 @@ block content
             a(href=root + 'signin') Sign in 
             | to access DataSeer
       div(id='navbar-lg')
-        ul
+        ul(style='padding-left: 15px;')
+          li
+              img(src='../img/DataSeer-logo-min.png' width='25')
+
           if current_user
             li
               a(href=root + 'myDocuments' class='nav') My documents
