--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -14,11 +14,13 @@ block content
             a(href=root + 'signin') Sign in 
             | to access DataSeer
       div(id='navbar-lg')
-        ul
+        ul(style='padding-left: 15px;')
+          li
+            img(src='../img/DataSeer-logo-min.png' width='25')
+          
           if current_user
             li
               a(href=root + 'myDocuments' class='nav') My documents
-
 
             if current_user.role.label === 'curator' || current_user.role.label === 'annotator'
               li
