--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -106,15 +106,18 @@ body {
 }
 
 #user-navbar > #logo {
-  background-image: url(../img/DataSeer-logo-beta-75.png);
+  /*background-image: url(../img/DataSeer-logo-75.png);*/
+  background-image: url(../img/DataSeer-logo-up-beta-75.png);
   background-repeat: no-repeat;
   background-position: left center;
-  min-height: 195px;
-  min-width: 485px;
+  /*min-height: 195px;*/
+  min-height: 165px;
+  max-height: 165px;
+  /*min-width: 485px;*/
 }
 
 #user-navbar > div {
-  height: 195px;
+  height: 165px;
   padding: 15px;
   text-align: center;
 }
