--- a/views/layout.pug
+++ b/views/layout.pug
@@ -20,10 +20,10 @@ html
       div#user_username #{current_user.username}
       div#user_role #{current_user.role.label}
     div(id='user-navbar' class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; margin-bottom:10px;padding-left: 25px;')
-      div(id='logo')
+      div(id='logo' style='padding-top: 0px; padding-bottom: 0px;')
       div
         if current_user
-          div(id='user' style='position:absolute; top:0px; right:10px; text-align:right;')
+          div(id='user' style='position:absolute; top:0px; right:10px; text-align:right;margin-right: 15px;')
             if (current_user.organisation !== '')
               label(style='font-size:small;') Connected as: <b>#{current_user.username}</b> (#{current_user.role.label}, #{current_user.organisation})
             else
