--- a/views/layout.pug
+++ b/views/layout.pug
@@ -25,9 +25,15 @@ html
         if current_user
           div(id='user' style='position:absolute; top:0px; right:10px; text-align:right;margin-right: 15px;')
             if (current_user.organisation !== '')
-              label(style='font-size:small;') Connected as: <b>#{current_user.username}</b> (#{current_user.role.label}, #{current_user.organisation})
+              label(style='font-size:small;') Connected as: 
+                a(href=href=root + 'settings')
+                  <b>#{current_user.username}</b> 
+              label(style='font-size:small;') (#{current_user.role.label}, #{current_user.organisation})
             else
-              label(style='font-size:small;') Connected as: <b>#{current_user.username}</b> (#{current_user.role.label}, None)
+              label(style='font-size:small;') Connected as: 
+                a(href=href=root + 'settings')
+                  <b>#{current_user.username}</b> 
+              label(style='font-size:small;') (#{current_user.role.label}, None)
         else
           div(id='user' style='position:absolute; top:0px; right:25px; text-align:right;')
             label(style='font-size:small;') 
