--- a/views/settings.pug
+++ b/views/settings.pug
@@ -6,7 +6,15 @@ block content
     div(class='row')
       div(class='col-12' style='background-color:#FFFFFF; border:1px solid #184D7E; border-radius: 20px; ')
         div(class='row' style='margin-top:20px;')
-          div(class='col-12' style='text-align: center;')
+          div(class='col-12' style='margin:auto;')
+            <table style='text-align: center; margin:auto;'>
+              <tr>
+                <td style='padding-right: 40px;'><b>Username</b>: #{current_user.username} </td>
+                <td style='padding-right: 20px;'><b>Role</b>:  #{current_user.role.label} </td>
+                <td style='padding-left: 20px;'><b>Organization</b>: #{current_user.organisation}</td>
+              </tr>
+            </table>
+          div(class='col-12' style='text-align: center;top: 20px;')
             h2 Update password
         div(class='row')
           div(class='col-12')
