--- a/views/layout.pug
+++ b/views/layout.pug
@@ -59,7 +59,7 @@ html
                   a(href=root + 'backoffice/accounts' class=(route === 'backoffice/accounts') ? 'nav active' : 'nav') Accounts
               if current_user.role.label === 'curator'
                 li
-                  a(href=root + 'backoffice/organisations' class=(route === 'backoffice/organisations') ? 'nav active' : 'nav') Organisations
+                  a(href=root + 'backoffice/organisations' class=(route === 'backoffice/organisations') ? 'nav active' : 'nav') Organizations
               li
                 a(href=root + 'settings' class=(route === 'settings') ? 'nav active' : 'nav') Settings
               li
