--- a/views/signup.pug
+++ b/views/signup.pug
@@ -23,7 +23,7 @@ block content
               .form-group
                 input.form-control(type='password', name='confirm_password', placeholder='confirm password')
               .form-group
-                label(for='organisation') Select your organisation
+                label(for='organisation') Select your organization
                 select.custom-select(name='organisation')
                   option(selected value='') None
                   if organisations
